apps/jellyfin/components/tls/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: shikanime
spec:
  template:
    spec:
      containers:
        - name: jellyfin
          volumeMounts:
            - name: tls
              mountPath: /tls
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: jellyfin-tls
