apps/jellyfin/components/tls/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
spec:
  template:
    spec:
      containers:
        - name: jellyfin
          livenessProbe:
            httpGet:
              port: https
              scheme: HTTPS
          ports:
            - name: https
              containerPort: 8920
          readinessProbe:
            httpGet:
              port: https
              scheme: HTTPS
          startupProbe:
            httpGet:
              port: https
              scheme: HTTPS
          volumeMounts:
            - name: tls
              mountPath: /etc/ssl/private
              readOnly: true
      volumes:
        - name: tls
          secret:
            items:
              - key: keystore.p12
                mode: "0640"
                path: keystore.p12
            secretName: jellyfin-tls
