apps/jellyfin/components/tls/ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: shikanime
spec:
  defaultBackend:
    service:
      name: jellyfin
      port:
        name: https
