apps/jellyfin/components/tls/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
spec:
  defaultBackend:
    service:
      name: jellyfin
      port:
        name: https
